<resources>
    <string name="app_name">Buscaminas MK II</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="Titulo">Buscaminas MK II</string>
    <string name="facil">Facíl</string>
    <string name="medio">Medio</string>
    <string name="dificil">Dificíl</string>
    <string name="autor">Fernando Arteaga</string>
    <string name="correo">damluisfernandoa@gmail.com</string>
    <string name="ajustes">Ajustes</string>
    <string name="Opciones">Opciones</string>
    <string name="records">Puntuaciones</string>
    <string name="salir">Salir</string>
    <string name="juego">Juego Nuevo</string>
    <string name="iconosc">Iconos Clasicos</string>
    <string name="iconosmb">Iconos Material Black</string>
    <string name="iconosmw">Iconos Material Light</string>
    <string name="iconosmc">Iconos Material Color</string>
    <string name="fin">Fin Del Juego</string>
    <string name="Gana">!Has ganado¡</string>
    <string name="pregunta">¿Quieres volver a jugar?</string>
    <string name="si">si</string>
    <string name="no">no</string>
    <string name="puntuacion">Bombas Restantes</string>
    <string name="ajustesg">Ajustes Generales</string>
    <string name="instruciones">Hola, este juego es una variante del buscaminas, las celdas se comportan de la misma forma que en el juego original, si pulsas una celda se mostrará con un número
    las bombas que tiene cerca, si la mantienes pulsada, y debajo hay una bomba, habrás encontrado una bomba, de lo contrario el juego se acaba. El juego finaliza cuando encuentras todas las bombas,
        ¡Buena suerte!</string>
    <string name="tituloins">Instrucciones</string>
    <string name="ajuestesgen">Ajustes generales</string>
    <string name="anchope">Ancho personalizado(Max 27 - Min 9)</string>
    <string name="largope">Largo personalizado(Max 37 - Min 9)</string>
    <string name="bombaspe">Número de bombas(Max 77 - Min 15)</string>
    <string name="ancho">Introduce el ancho</string>
    <string name="largo">Introduce el largo</string>
    <string name="vancho">9</string>
    <string name="vlargo">9</string>
    <string name="vbombas">15</string>
    <string name="sumancho">Valor del eje y</string>
    <string name="sumlargo">Valor del eje x</string>
    <string name="sumbomba">Número de bombas</string>
    <string name="anchotext">Ancho</string>
    <string name="largotext">Largo</string>
    <string name="bombas">Bombas</string>
    <string name="tablero">Creando tablero: </string>
    <string name="orientacion">Modo de orientación</string>
    <string name="orientacionsum">Cambia el modo de rotación entre rotar el tablero(conserva las posiciones), o invertir(el tablero se muestra igual que en el modo vertical))</string>

</resources>
